[project]
name = "wingpings"
version = "0.1.0"
description = ""
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
